--- a/composer.json
+++ b/composer.json
@@ -24,15 +24,15 @@
         }
     ],
     "require": {
-        "php": ">=5.5.0",
+        "php": "~7.2",
         "friendsofouro/geteventstore-core": "~0.8",
         "guzzlehttp/guzzle": "~6.0",
         "kevinrob/guzzle-cache-middleware": "^0.7.1",
         "doctrine/cache": "~1.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0",
-        "friendsofphp/php-cs-fixer": "^1.11"
+        "phpunit/phpunit": "~7.1",
+        "friendsofphp/php-cs-fixer": "~2.2"
     },
     "config": {
         "bin-dir": "bin"
